# cpp_sandbox

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  commands.md
lin_alg/: CMakeLists.txt
lin_alg/include/lin_alg/: mat_mul.h
lin_alg/src/: mat_mul.cpp
src/: main.cpp
